--- a/kerek.css
+++ b/kerek.css
@@ -42,9 +42,7 @@ header p {
       text-align: left;
        margin-left: 0%;}
 
-
 /* NAV */
-
 
   nav{grid-area: nav;
     position: sticky;
@@ -178,46 +176,46 @@ header p {
               .opened .line2 {stroke-dasharray: 1 60;stroke-dashoffset: -30;stroke-width: 6;}
               .opened .line3 {stroke-dasharray: 90 207;stroke-dashoffset: -134;stroke-width: 6;}
     
-    article{
+article{
     margin: 0% 0% 3% 0%;
     height: 100%;
     width: 100%;}
 
 
 /* CONTENT - TEVÉKENYSÉGEK */
-.tevekeny{justify-self: center;
-display: grid;
-border: 2px solid;
-border-radius: 100px;
-box-shadow: white 0px 0px 10px 1px;
-grid-template-columns: repeat(2,50%);
-margin: -5% 3% 5% 3%;
-color: whitesmoke;
-font-style: italic;
-font-size: 15px;
-padding: 10px;}
-
-.tev2 table { width: 100%; text-align: center; margin: 0% 1%;}
-.tev1 table { width: 100%; text-align: center; margin: 0% 1%;}
-.tevekeny img{width: 40px;height: 40px;
-margin: 4px;
-padding: 2px;
-border-radius: 100px;
-transition: all 0.4s;}
- .tevekeny img:hover {transform: scale(1.3);}  
-
-#nagysvg {width:60px;height: 60px;}
-  .szoci{border: gold 2px solid; border-radius: 100px; box-shadow: rgb(255, 196, 0) 0px 0px 10px 1px;}
-  .suli{border:crimson 2px solid; border-radius: 100px; box-shadow: rgb(255, 0, 212) 0px 0px 10px 1px;}
-  .erz{border: green 2px solid; border-radius: 100px; box-shadow: lime 0px 0px 10px 1px;}
-  .akkr{border: rgb(0, 38, 255) 2px solid; border-radius: 100px; box-shadow: rgb(0, 60, 255) 0px 0px 10px 1px;}
-
+.tevekenysegvalaszto p {padding: 4px; font-style: italic; color: whitesmoke; font-weight: bold; text-shadow: black 1px 4px 8px;}
+        .kisikon img{transition: transform 1s, box-shadow 1s; width: 40px; height: 40px;}
+          .kisikon img:hover{transform: scale(1.1); box-shadow: rgb(0, 0, 0) 0px 0px 10px 6px;}
+        .nagyikon img{transition: transform 1s, box-shadow 1s; width: 60px; height: 60px; display: flex; margin: auto;}
+          .nagyikon img:hover{transform: scale(1.1); box-shadow: rgb(0, 0, 0) 0px 0px 10px 6px;}
+  .tevekenysegvalaszto {display: grid;
+    grid-template-columns: repeat(4,25%);
+    justify-items: center;}
+        .tevval1,.tevval2,.tevval3,.tevval4 {
+          display: grid;
+          grid-template-columns:repeat(1, 100%);
+          grid-template-areas: "nagyikon" "kisikon";
+          justify-items: center;
+          margin: auto 25px;}
+          .tevval1 img{padding: 3px;background-color: rgba(255, 217, 0, 0.158); border: gold 2px solid; border-radius: 100px; box-shadow: rgb(255, 196, 0) 0px 0px 10px 1px;}
+          .tevval2 img{padding: 3px;background-color: rgba(255, 0, 0, 0.226); border:red 2px solid; border-radius: 100px; box-shadow: rgb(255, 0, 21) 0px 0px 10px 1px;}
+          .tevval3 img{padding: 3px;background-color: rgba(0, 128, 0, 0.219); border: green 2px solid; border-radius: 100px; box-shadow: lime 0px 0px 10px 1px;}
+          .tevval4 img{padding: 3px;background-color: rgba(0, 0, 255, 0.212); border: rgb(0, 38, 255) 2px solid; border-radius: 100px; box-shadow: rgb(0, 60, 255) 0px 0px 10px 1px;}
+      .kisikon {grid-area: kisikon;
+          display: grid;
+          grid-template-columns: repeat(3,33.3%);
+          justify-items: center;
+          text-align: center;
+          margin: 15px auto;
+          font-weight: normal;
+          font-size: 12px;}
+          
   #instrukcio {margin: 15px;
     text-shadow: rgb(0, 0, 0) 5px 5px 5px;
-    color: rgb(255, 255, 255);
+    color: gold;
+    font-size: small;
     font-style: italic; font-weight: bold;
     text-align: center; font-size: large;}
-
 
 
 /* CONTENT -INTÉZMÉNYEK */
@@ -436,9 +434,8 @@ transition: all 0.4s;}
                                 15% {text-shadow: none;color: transparent; }
                                 85% {text-shadow: none;color: transparent; }
                                 100% {visibility:visible;text-shadow: rgb(0, 0, 0) 5px 5px 5px;color: gold;}}
-                               /*  .negyes:hover .info3{text-shadow: rgba(0, 0, 0, 0) 5px 5px 5px;color: rgba(255, 255, 255, 0);} */
 
-
+/* SLIDER */
 
 section {grid-area: slide;
     margin-left: auto;
@@ -446,7 +443,6 @@ section {grid-area: slide;
     width: 100%;
     display: flex;
     flex-direction: row;}
-
 .container{
     padding: 1px;
     margin: 4% 2% 1% 2%;
@@ -461,7 +457,6 @@ section {grid-area: slide;
     backdrop-filter: blur(1.9px);
     -webkit-backdrop-filter: blur(3.9px);
     border: 2px solid rgba(255, 255, 255, 0.33);}
-
 .wrapper{
     width: 100%;
     display: flex;
@@ -480,8 +475,7 @@ section {grid-area: slide;
 
 
 .slide2{animation-delay: 2s;}
-
-img{width: 100%;}
+ img{width: 100%;}
 
 @keyframes slide{
     0%{transform: translateX(0);}
@@ -497,9 +491,9 @@ img{width: 100%;}
     70%{transform: translateX(-100%);}
     80%{transform: translateX(-100%);}
     90%{transform: translateX(0%);}
-    100%{transform: translateX(0%);}
-}
+    100%{transform: translateX(0%);}}
 
+/* TÁMGOATÁS */
 
 .tamop{
   background-image: url(./media/1\ \(3\).jpg);
@@ -658,15 +652,15 @@ footer{
       text-shadow: black 5px 5px 7px;
       font-size: large;
       font-style: oblique;
-      text-align: center;
-
-    }
+      text-align: center;}
 
 @media(max-width:991px){
-/* HEADER */
+
+  /* HEADER */
 
  header{display:none;}
-/* INTÉZMÉNY VÁLASZTÓ */
+
+ /* INTÉZMÉNY VÁLASZTÓ */
 
 .intezmenyvalaszto {margin: 1% auto 0% auto ;}
 
@@ -699,17 +693,27 @@ footer{
 transform: translateY(40px);}
 
 /* CONTENT - TEVÉKENYSÉGEK */
-.tevekeny{
-  box-shadow: white 0px 0px 10px 1px;
-  grid-template-columns: repeat(1,100%);
-  font-size: 12px;
-  border-radius: 40px;}
-  #instrukcio{ color:gold;font-size:  small; margin-bottom: 30px;}
-  
-/* BODY */
 
-body {
-  font-family: 'Times New Roman', Times, serif;
+.tevekenysegvalaszto {display: grid;grid-template-columns: repeat(2,50%);
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius:  70px;
+      padding: 5px;
+      margin: 5px;
+      border: whitesmoke solid 2px;
+      box-shadow: wheat 0px 0px 10px 1px;}
+.kisikon {grid-area: kisikon;
+  width: 0px; height: 0px;
+  overflow: hidden;
+  transform: scale(0);
+   font-weight:lighter;
+   font-size: 10px;}
+   #instrukcio{font-size: 13px; font-weight:normal ;}
+
+   /* BODY */
+
+body {font-family: 'Times New Roman', Times, serif;
   grid-template-areas: 
   "nav"
   "content"
@@ -723,9 +727,6 @@ body {
   .navcont{padding: 20px;
           box-shadow: rgb(38, 126, 126) 1px 1px 10px 1px;
           display:flex;}    
-         /*  display: grid;
-          grid-template-columns: repeat(5,20%);
-          grid-template-areas: "logo menu menu menu menu"; */
       .navcont label {display: initial;}
       .navcont .navbar{transform: translateX(-1000px);
               position:absolute;
