--- a/kerek.css
+++ b/kerek.css
@@ -71,7 +71,7 @@ header p {
            grid-template-areas: "logo menu menu menu menu";
            align-items: center;
            justify-content: space-between;
-           z-index: 1000;}
+           z-index: 900;}
            .logobar{grid-area: logo; display: flex;}
      .navbar{grid-area: menu;          text-decoration: none;
       justify-content: right;
@@ -652,8 +652,8 @@ section {grid-area: slide;
       .footerikonp a{color: gold; text-shadow: #000000 1px 1px 5px; }
       .footerikonp p{padding: 1px 0px;  color: white; text-shadow: #000000 1px 1px 5px; font-style: italic; }
 
-
 /* KÖTELEZŐ */
+
 #kotelezo_lent{
   z-index: 1000;
   width:17.5%;
@@ -661,60 +661,56 @@ section {grid-area: slide;
   display: flex;
   justify-self: right;
   bottom: 0%;}
-
-  #kotelezo_lent button{
-    z-index: 1000;
-  text-align: center; 
-  background-color: transparent;
-  border: 2px solid gold;
-  border-radius: 100px;
-  display: flex;
-  position: absolute;
-  justify-self: right;
-  right: 1%;
-  top: -10%; 
-  padding: 1.5%;
-  align-items: center;
-  cursor: pointer;
-  box-shadow: cyan 0px 0px 10px 1px;
-  width: 30px;
-    height: 30px;
-    color: rgb(255, 255, 255);
-    font-weight: 900;
-    font-style: normal;
-    justify-content: center;}
-
-  #kotelezo_fent{
+      #kotelezo_lent button{
+      z-index: 1000;
+      text-align: center; 
+      background-color: transparent;
+      border: 2px solid gold;
+      border-radius: 100px;
+      display: flex;
+      position: absolute;
+      justify-self: right;
+      right: 1%;
+      top: -10%; 
+      padding: 1.5%;
+      align-items: center;
+      cursor: pointer;
+      box-shadow: cyan 0px 0px 10px 1px;
+      width: 30px;
+      height: 30px;
+      color: rgb(255, 255, 255);
+      font-weight: 900;
+      font-style: normal;
+      justify-content: center;}
+#kotelezo_fent{
     z-index: 1000;
     width:17.5%;
     position: fixed;
     display: flex;
-    justify-self: right;
-    top: 0%;}
-  
-    #kotelezo_fent button{
-    z-index: 100;
-    text-align: center; 
-    background-color: transparent;
-    border: 2px solid gold;
-    border-radius: 100px;
-    display: flex;
-    position: absolute;
-    padding: 1.5%;
-    align-items: center;
-    cursor: pointer;
-    box-shadow: cyan 0px 0px 10px 1px;
-    width: 30px;
-    height: 30px;
-    color: rgb(238, 255, 0);
-    font-weight: 900;
-    font-style: normal;
-    justify-content: center;
-    top: 0%; 
-    left: -5%;   
-  }
+    top: 32.5%;
+    left: 82.5%;}
+        #kotelezo_fent button{
+        z-index: 100;
+        text-align: center; 
+        background-color: transparent;
+        border: 2px solid gold;
+        border-radius: 100px;
+        display: flex;
+        position: absolute;
+        padding: 1.5%;
+        align-items: center;
+        cursor: pointer;
+        box-shadow: cyan 0px 0px 10px 1px;
+        width: 30px;
+        height: 30px;
+        color: rgb(238, 255, 0);
+        font-weight: 900;
+        font-style: normal;
+        justify-content: center;
+        top: 0%; 
+        left: -5%;}
 
-
+        #kotelezo_fent img{z-index: 000;}
 
 
 
@@ -927,7 +923,8 @@ body {font-family: 'Times New Roman', Times, serif;
     font-style: normal;
     justify-content: center;}
 
-  #kotelezo_fent{width:50%;top: 8.5%;}
+  #kotelezo_fent{width:50%;top: 9%;
+    left: 50%;}
     #kotelezo_fent button{
     width: 30px;
     height: 30px;
